--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -91,6 +91,7 @@
 
 @mixin anchor-to-button(
   $font-size: 16px,
+  $font-weight: 600,
   $width: fit-content,
   $color: $black,
   $background-color: $gray,
@@ -106,7 +107,7 @@
   border-radius: 5px !important;
   border: none !important;
   padding: 5px 10px !important;
-  font: 600 $font-size "Montserrat", Verdana, Geneva, Tahoma, sans-serif !important;
+  font: $font-weight $font-size "Montserrat", Verdana, Geneva, Tahoma, sans-serif !important;
   white-space: collapse !important;
   transition: background 0.1s ease-in-out;
 
